# agentsaas-v3

./: .dockerignore  .gitignore  Dockerfile  agent_demo.py  agent_team.txt  agents.py  app.py  auth.py  celery_app.py  celery_beat.py  celerybeat-schedule  docker-compose.yml  download_docs.py  firestore.rules  pyproject.toml  readme.md  requirements.txt  tasks.py  tools.py
client/: README.md  index.html  package-lock.json  package.json
client/src/: App.jsx
client/src/api/: authApi.js
client/src/components/: ProtectedRoute.jsx
client/src/context/: AuthContext.jsx  TaskContext.jsx
client/src/pages/: ClientDashboard.jsx  ExecutorDashboard.jsx  ForgotPassword.jsx  Home.jsx  Login.jsx  Register.jsx  ResetPassword.jsx
client/src/pages/dashboard/: DashboardOverview.jsx  Marketplace.jsx  Messages.jsx  Tasks.jsx
client/src/pages/dashboard1/: ClientDashboardOverview.jsx  MyTasks.jsx  PostTask.jsx
frontend/: middleware.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(main)/: layout.tsx
frontend/app/components/: Header.tsx
frontend/app/dashboard/: page.tsx
frontend/app/fonts/: Inter-VariableFont_opsz,wght.ttf:Zone.Identifier
frontend/app/payment-success/: page.tsx
frontend/app/role-selection/: page.tsx
frontend/app/settings/: page.tsx
server/: package-lock.json  package.json  server.js
server/controllers/: authController.js
server/middlewares/: authMiddleware.js
server/models/: Notifications.js  User.js
server/services/: jwtService.js
(+5 files in other folders)
